src/main/java/com/example/harumeonglog/global/error/exception/CommentException.java
package com.example.harumeonglog.global.error.exception;

import com.example.harumeonglog.global.error.code.BaseErrorCode;

public class CommentException extends GeneralException {
    public CommentException(BaseErrorCode baseErrorCode) {
        super(baseErrorCode);
    }
}
